LWC Lead Score/force-app/main/default/objects/Lead_Scoring_Rule__c/Lead_Scoring_Rule__c.object-meta.xml
<CustomObject>
    <label>Scoring Rule</label>
    <nameField>
        <displayFormat>SR-{0000}</displayFormat>
        <label>Rule Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Scoring Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>