LWC Lead Score/force-app/main/default/objects/Lead_Scoring_Rule__c/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
                <default>true</default>
                <label>Equals</label>
            </value>
            <value>
                <fullName>Not_Equals</fullName>
                <label>Not Equals</label>
            </value>
            <value>
                <fullName>Greater_Than</fullName>
                <label>Greater Than</label>
            </value>
            <value>
                <fullName>Less_Than</fullName>
                <label>Less Than</label>
            </value>
            <value>
                <fullName>Contains</fullName>
            </value>
            <value>
                <fullName>IsBlank</fullName>
                <label>Is Blank</label>
            </value>
            <value>
                <fullName>IsNotBlank</fullName>
                <label>Is Not Blank</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>